Fix all phpstan errors
commit 5a075d60baf71d59c1489a4fdff916f4a6915649
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Sun Apr 19 11:15:14 2020 +0000

    Fix all phpstan errors

commit 1853d29b085bd01c9bbff8d16199a447a932a911
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Sat Apr 18 16:52:36 2020 +0000

     Fix phpstan errors from level 6

commit bfc582b781f1d71bafc990fbcaee87845a6c6a92
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Sat Apr 18 16:33:25 2020 +0000

    Fix phpstan errors level 6 on Tools

commit 74e50d71d9c7fc2378fcf149f0b6ecb99f13b5ac
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Sat Apr 18 15:54:47 2020 +0000

    Fix phpstan errors level 6 on Exceptions

commit 283afb5128daa6c680b8d5a9db7abf12306823c7
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Sat Apr 18 15:46:58 2020 +0000

    Fix phpstan errors level 6 on LoadTools and Commands

commit c539934511415e2bf16950fcb66b9b5741195d77
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Sat Apr 18 10:04:50 2020 +0000

    Fix phpstan errors from level 3

commit 101407ce571bc535d9964a1ee36fe57de006e4ba
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Sat Apr 18 10:01:45 2020 +0000

    Fix phpstan errors from level 2

--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -14,7 +14,7 @@ Tools:
 # Configuración de cada una de las herramientas
 phpstan:
     config: './qa/phpstan-phpqa.neon'
-    level: 1
+    level: 8 #level 0-8 (0 default, 8 max)
 
 #Se ejecuta contra la raiz del proyecto
 parallel-lint:
