Creation of different flows according to the branches
commit f9a44a97f918d580144a63d6dcd5b9ca5d0a77c1
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Mon Apr 20 16:43:16 2020 +0000

    Other fixes

commit 76ba5b889bf50f206230ae13fca2f249bd8b8c52
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Mon Apr 20 16:39:26 2020 +0000

    Fix phpstan errors

commit a20287accdacba1406494fac0553c0a9f9b1e2e0
Author: Wtyd <jorgelilaoc@gmail.com>
Date:   Mon Apr 20 16:33:36 2020 +0000

    Creation of different flows according to the branches

--- a/.github/workflows/feature-ci.yml
+++ b/.github/workflows/feature-ci.yml
@@ -1,10 +1,12 @@
-name: PHP Composer CI
+name: Feature CI
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches: [ master, ci ]
+    branches-ignore:
+      - master
   pull_request:
-    branches: [ master ]
+    branches-ignore:
+      - master
 
 env:
   extensions: mbstring #intl, pcov
@@ -38,15 +40,15 @@ jobs:
       if: ${{ 'phpmd' == matrix.tool }}
 
     - name: Execute Php Stan
-      run: ${{ matrix.tool }} analyse -c ./qa/phpstan-phpqa.neon --no-progress -n -l 1 ./src
+      run: ${{ matrix.tool }} analyse -c ./qa/phpstan-phpqa.neon --no-progress -n -l 8 ./src
       if: ${{ 'phpstan' == matrix.tool }}
 
   tests:    
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] #[ubuntu-latest, windows-latest, macOS-latest]
-        php-versions: ['7.3']
+        os: [ubuntu-latest]
+        php-versions: ['7.2']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.os }}
     steps:
     - name: Checkout
