paths (array) no funciona desde línea de comandos

--- a/qa/phpstan-phpqa.neon
+++ b/qa/phpstan-phpqa.neon
@@ -2,6 +2,7 @@
 # currentWorkingDirectory es donde se ejecuta phpstan, en este caso desde ./
 {
     parameters: {
+        level: 8
         paths: [
             %currentWorkingDirectory%/src,
             # %currentWorkingDirectory%/tests
