--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -13,9 +13,9 @@ Tools:
 
 # Configuración de cada una de las herramientas
 phpstan:
+    paths: './src' # REQUIRED. Array with blank space separation.
     config: './qa/phpstan-phpqa.neon'
     level: 8 #level 0-8 (0 default, 8 max)
-    paths: './src/Commands ./src/Exception' # array with blank space separation
 
 #Se ejecuta contra la raiz del proyecto
 parallel-lint:
