Fix read phpstan file configuration

--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -13,9 +13,9 @@ Tools:
 
 # Configuración de cada una de las herramientas
 phpstan:
-    paths: ['./src'] # REQUIRED
     config: './qa/phpstan-phpqa.neon'
-    level: 8 #level 0-8 (0 default, 8 max)
+    # paths: ['./src'] # REQUIRED
+    # level: 8 #level 0-8 (0 default, 8 max)
 
 #Se ejecuta contra la raiz del proyecto
 parallel-lint:
