--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -14,7 +14,7 @@ Tools:
 # Configuración de cada una de las herramientas
 phpstan:
     config: './qa/phpstan-phpqa.neon'
-    # paths: ['./src'] # REQUIRED
+    # paths: ['./src']
     # level: 8 #level 0-8 (0 default, 8 max)
 
 #Se ejecuta contra la raiz del proyecto
