Added memory-limit parameter

--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -14,6 +14,7 @@ Tools:
 # Configuración de cada una de las herramientas
 phpstan:
     config: './qa/phpstan-phpqa.neon'
+    #memory-limit: '1G' # Examples: 1M 2000M 1G 5G
     # paths: ['./src']
     # level: 8 #level 0-8 (0 default, 8 max)
 
