PhpStan tool refactor and fix errors
* test

* Test

* Configuración de paths para phpstan 1

* paths (array) no funciona desde línea de comandos

* paths array funcionando

* Parametro paths funcionando como array. Validación de params: config, paths y level

* Pasado phpcs

* Paths set as array

* Add TODO

* Fix read phpstan file configuration

* Phpstan level changed to 8

* Added memory-limit parameter

* TODO done

* Fixed format error

Co-authored-by: Wtyd <jorgelilaoc@gmail.com>

--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -14,7 +14,9 @@ Tools:
 # Configuración de cada una de las herramientas
 phpstan:
     config: './qa/phpstan-phpqa.neon'
-    level: 8 #level 0-8 (0 default, 8 max)
+    #memory-limit: '1G' # Examples: 1M 2000M 1G 5G
+    # paths: ['./src']
+    # level: 8 #level 0-8 (0 default, 8 max)
 
 #Se ejecuta contra la raiz del proyecto
 parallel-lint:
