Fix Production worflow in CI

--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -1,8 +1,8 @@
-name: Master CI
+name: Production CI
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches: [ master ]
+    branches: [ master, pipeline ]
   pull_request:
     branches: [ master ]
 
@@ -45,8 +45,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        php-versions: ['7.2', '7.3' '7.4']
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        php-versions: ['7.2', '7.3', '7.4']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.os }}
     steps:
     - name: Checkout
