--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -30,6 +30,7 @@ phpcs:
     warning-severity: 6
   
 phpmd:
+  path: './src/'
   rules: './qa/phpmd-src-ruleset.xml' #or predefined rules cleancode,codesize,controversial,design,naming,unusedcode
   exclude: [vendor]  # Se podría configurar en las rules directamente
 
