Added new author :)

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
         "name": "Jorge Lilao",
         "email": "jorgelilaoc@gmail.com"
+    },
+    {
+      "name": "Pablo Lilao",
+      "email": "pablolilao@protonmail.com"
     }
 ],
   "autoload": {
