--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# libraries dont track *.lock
 composer.lock
 
 .phpunit.result.cache
@@ -6,3 +7,6 @@ infection.log*
 
 vendor
 
+# Dummy files for manual testing
+Dummy.php
+src/dummy/
