--- a/.github/workflows/feature-ci.yml
+++ b/.github/workflows/feature-ci.yml
@@ -2,8 +2,7 @@ name: Feature CI
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches-ignore:
-      - master
+    branches-ignore: [master, jobs-programados]
 
   pull_request:
     branches-ignore:
