--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -5,58 +5,55 @@ on:
     branches: [ jobs-programados ]
   # schedule:
     # * is a special character in YAML so you have to quote this string
-    # - cron:  '*/15 * * * *'
+    # - cron:  '0 4 * * *' # Ejecución todos los días a las 4 de la mañana
 
 env:
   extensions: mbstring #intl, pcov
+  report_path: informes
+
 jobs:
-  # code_coverage:    
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-latest]
-  #       php-versions: ['7.2']
-  #   name: Code Coverage
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v2
+  code_coverage:    
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        php-versions: ['7.2']
+    name: Code Coverage
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-  #   - name: Install PHP
-  #     uses: shivammathur/setup-php@v2
-  #     with:
-  #       php-version: ${{ matrix.php-versions }}
-  #       extensions: ${{ env.extensions }} #optional
-  #       tools: prestissimo, phpcs, phpcbf, phpmd, phpstan, phpcpd
-  #       ini-values: "post_max_size=256M" #optional
-  #       coverage: xdebug
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+        extensions: ${{ env.extensions }} #optional
+        tools: prestissimo, phpcs, phpcbf, phpmd, phpstan, phpcpd
+        ini-values: "post_max_size=256M" #optional
+        coverage: xdebug
         
-  #   - name: Install dependencies
-  #     run: composer install --prefer-dist --no-progress --no-suggest
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest
 
-  #   - name: Install Parallel-Lint
-  #     run: composer global require php-parallel-lint/php-parallel-lint
+    - name: Install Parallel-Lint
+      run: composer global require php-parallel-lint/php-parallel-lint
 
-  #   - name: Export path
-  #     run: echo "::add-path::$(composer -q global config home)/vendor/bin"
+    - name: Export path
+      run: echo "::add-path::$(composer -q global config home)/vendor/bin"
 
-  #   - name: Install Phpcpd
-  #     run:   wget -O phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
+    - name: Install Phpcpd
+      run:   wget -O phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
 
-  #   - name: Tests with code coverage
-  #     run: vendor/bin/phpunit --coverage-html coverage
+    - name: Tests with code coverage
+      run: vendor/bin/phpunit --coverage-html ${{ env.report_path }}/coverage
 
-  #   - name: Tests documentation
-  #     run: vendor/bin/phpunit --testdox-html documentation.html
+    - name: Tests documentation
+      run: vendor/bin/phpunit --testdox-html ${{ env.report_path }}/documentation.html
 
-  #   - uses: actions/upload-artifact@v2
-  #     with:
-  #       name: CodeCoverage
-  #       path: coverage/
-
-  #   - uses: actions/upload-artifact@v2
-  #     with:
-  #       name: Documentation
-  #       path: documentation.html
+    - uses: actions/upload-artifact@v2
+      with:
+        name: CodeCoverage
+        path: ${{ env.report_path }}
 
   infection:    
     runs-on: ${{ matrix.os }}
@@ -106,9 +103,9 @@ jobs:
       run: infection --version
 
     - name: Infection execute
-      run: infection --threads=10
+      run: infection --threads=10 --no-progress --filter=src
 
-    # - uses: actions/upload-artifact@v2
-    #   with:
-    #     name: CodeCoverage
-    #     path: coverage/
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Infection
+        path: ${{ env.report_path }}
