Print fixes in ToolExecuto and GitHooks

--- a/.github/workflows/examples.yml.dist
+++ b/.github/workflows/examples.yml.dist
@@ -5,7 +5,10 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '*/15 * * * *'
+  # se podría reabrir un issue/pull_request si al mergear con master la pipeline falla?
 jobs:
   build:
 
