--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
+# libraries dont track *.lock
 composer.lock
 
+# phpunit
+coverage/
 .phpunit.result.cache
 
 infection.log*
 
 vendor
 
+# Dummy files for manual testing
+Dummy.php
+src/dummy/
