--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -49,6 +49,9 @@ jobs:
     - name: Tests documentation
       run: vendor/bin/phpunit --testdox-html ${{ env.report_path }}/documentation.html
 
+    - name: Junit
+      run: vendor/bin/phpunit--log-junit ${{ env.report_path }}/junit.xml
+
     - uses: actions/upload-artifact@v2
       with:
         name: CodeCoverage
@@ -101,4 +104,41 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: Infection
+        path: ${{ env.report_path }}
+
+  PhpMetrics:    
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        php-versions: ['7.2']
+    name: PhpMetrics
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+        extensions: ${{ env.extensions }} #optional
+        tools: prestissimo, phpcs, phpcbf, phpmd, phpstan, phpcpd
+        ini-values: "post_max_size=256M" #optional
+        coverage: xdebug
+        
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest
+
+    - name: Install PhPMetrics
+      run:  composer global require 'phpmetrics/phpmetrics'
+
+    - name: Export path
+      run: echo "::add-path::$(composer -q global config home)/vendor/bin"
+
+    - name: PhPMetrics execute
+      run: phpmetrics --report-html=${{ env.report_path }}/phpmetrics --junit=${{ env.report_path }}junit.xml ./src
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: PhPMetrics
         path: ${{ env.report_path }}
