--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -46,7 +46,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        php-versions: ['7.2', '7.3', '7.4']
+        php-versions: ['7.1', '7.2', '7.3', '7.4']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -72,11 +72,12 @@ jobs:
 
     - name: Install Phpcpd Unix
       run:   wget -O phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
-      if: ${{ '7.2' == matrix.php-versions && ('ubuntu-latest' == matrix.os || 'macos-latest' == matrix.os)}}
+      if: ${{ ('7.2' == matrix.php-versions || '7.1' == matrix.php-versions) && ('ubuntu-latest' == matrix.os || 'macos-latest' == matrix.os)}}
 
     - name: Install Phpcpd Windows
       run:   curl -o phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
-      if: ${{ '7.2' == matrix.php-versions && 'windows-latest' == matrix.os}}
+      if: ${{ ('7.2' == matrix.php-versions || '7.1' == matrix.php-versions) && 'windows-latest' == matrix.os}}
 
+      #4.1.0 para php 7.1.33
     - name: Testing the Aplication
       run: vendor/bin/phpunit
