--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "name": "githooks/githooks",
-  "description": "Ejecuta herramientas de validación y análisis de código cuando suceden eventos de git",
   "type": "library",
+  "description": "Ejecuta herramientas de validación y análisis de código cuando suceden eventos de git",
+  "keywords": ["git", "githooks", "precommit", "pre-commit", "commit", "qa"],
   "license": "MIT",
   "authors": [
     {
@@ -24,22 +25,19 @@
      }
   },
   "config": {
-    "platform": {
-        "php": "7.3.0"
-    },
     "sort-packages": true
   },
   "bin": ["bin/githooks"],
   "require-dev": {
     "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.3",
-    "phpunit/php-code-coverage": "^7.0.7",
-    "phpunit/phpunit": "^8.5"
+    "phpunit/php-code-coverage": "^6.0 || ^7.0",
+    "phpunit/phpunit": "^7.0 || ^8.0"
   },
   "require": {
-    "illuminate/console": "^6.0",
-    "illuminate/container": "^6.8",
-    "illuminate/events": "^6.0",
-    "symfony/yaml": "^4.4 || ^5.0"
+    "illuminate/console": "^5.0 || ^6.0",
+    "illuminate/container": "^5.0 || ^6.0",
+    "illuminate/events": "^5.0 || ^6.0",
+    "symfony/yaml": "^4.0 || ^5.0"
   }
 }
