--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,11 @@
   "require-dev": {
     "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.3",
+    "phpmd/phpmd": "^2.9",
+    "phpstan/phpstan": "^0.12.46",
     "phpunit/php-code-coverage": "^6.0 || ^7.0",
-    "phpunit/phpunit": "^7.0 || ^8.0"
+    "phpunit/phpunit": "^7.0 || ^8.0",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "require": {
     "illuminate/console": "^5.0 || ^6.0",
